--- a/MusicOrganizer/Views/Artists/Show.cshtml
+++ b/MusicOrganizer/Views/Artists/Show.cshtml
@@ -6,12 +6,11 @@
 
 <h1>@Model["artists"].ArtistName</h1>
 
-<ol>
+
 @foreach (Records record in @Model["records"])
 {
-  <li><a href='/artists/@Model["artists"].Id/records/@record.Id'>@record.RecordName</a></li>
+  <a href='/artists/@Model["artists"].Id/records/@record.Id'><button class="btn btn-outline-info btn-sm">@record.RecordName</button></a>
 }
-</ol>
 
 <p><a href='/artists/@Model["artists"].Id/records/new'>Add a new record</a></p>
 <p><a href='/artists'>Return to artists page</a></p>
